--- a/deliverables/WP2/D2_3.tex
+++ b/deliverables/WP2/D2_3.tex
@@ -12,7 +12,8 @@
 \usepackage{amsfonts}
 \usepackage{amssymb}
 \usepackage{array}
-\usepackage{subfigure}
+\usepackage{caption,subfig}
+% \usepackage{subfigure}
 \usepackage{lscape}
 
 %%%%%%%%%%%%%%%%%5 includepdf
@@ -34,6 +35,10 @@
 \newcommand{\TFD}{{\sc TFD}}
 \newcommand{\YAHSP}{{\sc YAHSP}}
 \newcommand{\LAO}{{\sc LaO}}
+\def\MODAE{{\sc MO-DaE}}
+\def\ZENO{{\sc Zeno}}
+\def\MULTIZENO{{\sc MultiZeno}}
+\def\PARAMILS{{\sc ParamILS}}
 
 \def\UU{{\mathbb{U}}}
 
@@ -185,13 +190,65 @@ Also we tried an indirect model using Rank-SVM regression. Here, after optimizin
 \includepdf[height=30cm,pages=-,offset=2.2cm -4cm]{ipc2011.pdf}
 \newpage
 
-\chapter{A new framework for off-line tuning: ParamILS}
+\chapter{ParamILS: A robust and efficient framework for off-line tuning}
 
-It is widely acknowledged today that off-line parameter tuning has somehow reached a mature state, and is considered a mandatory step when evaluating and validating the performance of any optimization or machine learning algorithm. This recent trend, advocated by Holger Hoos (University of British Columbia) under the name of {\em Programming by Optimization} (see e.g., http://www.prog-by-opt.net/ and references herein) has however been started many years ago in the Evolutionary Computation community, with the seminal work {\em  Parameter control in evolutionary algorithms} by A.E. Eiben, R. Hinterding, and Z. Michalewicz published in the IEEE Transactions on Evolutionary Computation (3(2):124-141) in 1999, and the many different (meta-)algorithms that have been proposed in that respect (see Deliverable 2.1, Section 3.3.2 for detailed descriptions). However, the situation seems to have slightly evolved since this Deliverable was written, and whereas all our past experiments were using some Racing procedure, the ParamILS framework developed at University of British Columbia was found better performing, and more flexible and general purpose tool than all EC-specific approaches (like SPO and REVAC for instance), and than the F-Race framework proposed by IRIDIA. 
+It is widely acknowledged today that off-line parameter tuning has somehow reached a mature state, and is considered a mandatory step when evaluating and validating the performance of any optimization or machine learning algorithm. This recent trend, advocated by Holger Hoos (University of British Columbia) under the name of {\em Programming by Optimization} (see e.g., http://www.prog-by-opt.net/ and references herein) has however been started many years ago in the Evolutionary Computation community, with the seminal work {\em  Parameter control in evolutionary algorithms} by A.E. Eiben, R. Hinterding, and Z. Michalewicz in 1999 \cite{eiben99parameter}, and the many different (meta-)algorithms that have been proposed in that respect (see Deliverable 2.1, Section 3.3.2 for detailed descriptions). However, the situation seems to have slightly evolved since that Deliverable was written, and whereas all our past experiments were using some Racing procedure, the ParamILS framework developed at University of British Columbia was found better performing, and more flexible and general purpose tool than all EC-specific approaches (like SPO \cite{SPO:CEC05} and REVAC \cite{NannenE07} for instance), and than the F-Race \cite{birattari2002} framework proposed by IRIDIA. \\
+
+The off-line parameter tunning problem can be informally stated as a meta-optimization algorithm: given an algorithm, a set of parameters for the algorithm and a set of input data, 
+find parameter values under which the algorithm achieves the best possible performance on the input data.
+To avoid potential confusion between algorithms whose performance is optimized and algorithms used for carrying out that optimization task, we refer to the former as target algorithms and to the latter as configuration procedures (or simply configurators). This setup is illustrated in Figure~\ref{fig:paramIlsfreamwork}.
+
+\begin{figure}[h!]
+ \centering
+ \includegraphics[width=0.8\textwidth]{schemaParamILS.png}
+ \caption{ParamILS framework: A configuration scenario includes an algorithm to be configured and a collection of problem instances.
+A configuration procedure executes the target algorithm with specified parameter settings on some or all of the instances, receives information about the performance of these runs, and uses
+this information to decide which subsequent parameter configurations to evaluate.}
+\label{fig:paramIlsfreamwork}
+\end{figure}
+
+ParamILS~\cite{hutter2009paramils} is suited to any parameterized algorithm whose parameters can be discretized. ParamILS searches through the space of possible parameter configurations, evaluating configurations by running the algorithm to be optimized on a set of benchmark instances. Users should provide
+\begin{itemize}
+\item a parametric algorithm A (executable to be called from the command line),
+\item  all parameters and their possible values (parameters need to be configurable from the command line),
+\item all parameters and their possible values (parameters need to be configurable from the command line),
+\item and a set of benchmark problems, S.
+ \end{itemize}
+
+The idea behind ParamILS is to use iterated local search (ILS) \cite{lourencco2003iterated} to search for performance-optimizing parameter configurations. ILS is a prominent stochastic
+local search method that builds a chain of local optima by iterating through a main loop consisting of (1) a solution perturbation to escape from local optima, (2) a subsidiary local search procedure and (3) an acceptance criterion to decide whether to keep or reject a newly obtained candidate solution.
+
+Users can choose from a multitude of optimization objectives, reaching from minimizing average runtime to maximizing median approximation qualities. ParamILS then executes algorithm A with different combinations of parameters on instances sampled from S, searching for the configuration that yields overall best performance across the benchmark problems. The issue of which instances to consider (how to sample S) will not be discussed here, even though it is of utter importance, as demonstrated in the single-objective case with the racing procedure in this project (see Deliverable 2.2, Chapter 3.
+
+Another point of view on ParamILS is that of a manually-executed local search with restarts in parameter configuration space. More precisely, it is an iterative first improvement procedure with restarts, with a search space consisting of all possible parameter configurations, an objective function that quantifies the performance achieved by the target algorithm with a given configuration, and a neighborhood relationships based on changes on one single parameter value at a time. 
+
+When dealing with multi-objective problem, the optimal solution of the target algorithm is a set of non-dominated solutions as close as possible from the true Pareto set, i.e., the optimal trade-offs between the different conflicting objectives. In order to measure the quality of the output $A$ of the target algorithm, we need some reference set $Z^*_N$, and compute the hypervolume difference between $A$ and $Z^*_N$ \cite{Zitzler2004}. The smaller this (positive) measure, the better the approximation of $Z^*_N$ by $A$. 
+Whenever available, the reference set $Z^*_N$ is chosen as the true Pareto set. However, and in particular in real world problems,the true Pareto set is not known, and the reference set is chosen as non-dominated points from the union of all approximations ever obtained.
+
+Figure \ref{fig:paramILS-trajectories} displays the behavior of ParamILS when otimizing the parameters of the four candidate multi-objective schemes for \MODAE\ that are compared in Deliverable 3.3, Chapter 2. The different restarts are clearly visible (sudden increase of the hypervolume). Furthermore, ParamILS very often discovers the best setting rather early in the run, but keeps on trying new configurations, somehow validating the default values that are used as a starting point. However, it also happens (not on these plots) that the best configuration is found later in the run. 
+
+
+\bibliographystyle{plain}
+\bibliography{ppsnb}
+
+\newpage
+\begin{figure}[h!]
+ \centering
+ \subfloat[zeno3$-{cost}$]{ \includegraphics[width=0.45\textwidth]{zeno3e_Add_paramils.png}}
+  \subfloat[zeno3$-{risk}$]{\includegraphics[width=0.45\textwidth]{zeno3e_Max_paramils.png}}\\
+  \subfloat[zeno6$-{cost}$]{\includegraphics[width=0.45\textwidth]{zeno6e_Add_paramils.png}}
+  \subfloat[zeno6$-{risk}$]{\includegraphics[width=0.45\textwidth]{zeno6e_Max_paramils.png}}\\
+  \subfloat[zeno9$-{cost}$]{\includegraphics[width=0.45\textwidth]{zeno9e_Add_paramils.png}}
+  \subfloat[zeno9$-{risk}$]{\includegraphics[width=0.45\textwidth]{zeno9e_Max_paramils.png}}\\
+\caption{Sample ParamILS trajectories for the different algorihtms that are compared in the EMO 2013 paper (see Deliverable 3.3 Chapter 2).}
+\label{fig:paramILS-trajectories}
+\end{figure}
 
 
 \newpage
 \chapter{Using ParamILS for multi-objective parameter setting: the case of the aggregation approach}
+
+As discussed in previous Chapter, when tuning the parameters of some target multi-objective algorithm (evolutionary or not), a natural metric for measuring the performance of the algorithm is the hypervolume w.r.t. some reference set (if at all possible, the true Pareto front of the problem at hand). This metric has been used in all experiments done in this project for Pareto-based multi-objective optimization (see Deliverable 3.3 Chapter 2).
 
 
 \newpage
