--- a/deliverables/WP2/ppsnb.bib
+++ b/deliverables/WP2/ppsnb.bib
@@ -781,8 +781,8 @@
 }
 
 @ARTICLE{hutter2009paramils,
-  author = {Hutter, F. and Hoos, H.H. and Leyton-Brown, K. and St{\"u}tzle, T.},
-  title = {ParamILS: an automatic algorithm configuration framework},
+  author = {Hutter, F. and Hoos, H.H. and Leyton-Brown, K. and St{\"u}tzle, Th.},
+  title = {{ParamILS: an Automatic Algorithm Configuration Framework}},
   journal = {Journal of Artificial Intelligence Research},
   year = {2009},
   volume = {36},
@@ -877,7 +877,7 @@
 
 @ARTICLE{lourencco2003iterated,
   author = {Louren{\c{c}}o, H. and Martin, O. and St{\"u}tzle, T.},
-  title = {Iterated local search},
+  title = {{Iterated Local Search}},
   journal = {Handbook of metaheuristics},
   year = {2003},
   pages = {320--353},
@@ -1029,8 +1029,8 @@
 
 @INPROCEEDINGS{NannenE07,
   author = {V. Nannen and A. E. Eiben},
-  title = {Relevance Estimation and Value Calibration of Evolutionary Algorithm
-	Parameters},
+  title = {{Relevance Estimation and VAlue Calibration of Evolutionary Algorithm
+	Parameters}},
   booktitle = {Proc. Intl. Joint Conference on Artificial Intelligence},
   year = {2007},
   editor = {{M. Veloso}},
@@ -1040,7 +1040,7 @@
 @INPROCEEDINGS{Nannen07,
   author = {V. Nannen and S. K. Smit and A. E. Eiben},
   title = {Costs and Benefits of Tuning Parameters of Evolutionary Algorithms},
-  booktitle = {Proceedings of the 20th Conference on Parallel Problem Solving from
+  booktitle = {Proceedings of the 10th Conference on Parallel Problem Solving from
 	Nature},
   year = {2008}
 }
