--- a/deliverables/WP2/D2_3.tex
+++ b/deliverables/WP2/D2_3.tex
@@ -154,17 +154,23 @@ After some preliminary experiments that confirmed this trend, it was decided to
 The rest of the deliverable will thus detail the work done on \LAO\ following the preliminary work that has been introduced in Deliverable 2.2, Chapter 3, that unfortunately didn't bring much improvement over the preliminary results. Then we will turn to the specific work done in the context of Pareto-based multi-objective optimization, in relationship with Deliverable 3.3.
 
 \newpage	
-\chapter{Efforts on LaO}
+\chapter{Progress on LaO}
+\section{New results: ICAPS2011 and IPC7}
 
-\section{Improvements}
+A first research line was to continue the work on \LAO\ that had been started in early 2011, and was published at GECCO as a poster, and in the selected papers of the Evolution Artificielle conference (Hao et al., eds, LNCS 7401, Springer Verlag, pp 159-170, 2012). These results have been described in Deliverable 2.2, where Chapter 3 contains the seminal paper on \LAO\ that was reduced to a 2 pages poster description at GECCO, and slightly reduced for space constraint reasons in the LNCS volume of Evolution Artificielle.
 
-After the very promising first results of the Learn-and-Optimize framework, published in GECCO (as a poster) and the Evolution Artificielle conference (
+These results were detailed and slightly extended in a paper presented at the {\em Planning and Learning Workshop} at ICAPS2011, that is included lated in this Section. The conclusions remain the same: some marginal improvement over the default parameter set could be obtained using \LAO\ with only a few iterations. However, the inter-domain generalization capabilities remain unknown -- or, more precisely, though not reported in the paper, the first attempts proved to give poor results, even with more iterations. The main critical issue probably still was the quality of the feature set, that was far too limited to actually take into account the characteristics of the instances that could lead to the optimal parameter set, undermining the critical hypothesis of the algorithm.
 
-Several research directions have been explored to improve the results of the Learn-and-Optimize framework, that alas didn't provide significant improvement on the AI Planning domains, and hence have not lead to any publication -- as unfortunately nowadays in science, negative results
-are no results to publish.
+In the meantime, \LAO\ also entered the IPC7 competition (that took place at ICAPS2011), in the Learning Track. Unfortunately, it ranked only 7th out of 9 candidates, being unable to solve several of the hidden instances in spite of the learning phase. This is attributed to the poor generalization capacities of the framework.
 
-These directions regard on the one hand the features are used to characterize the different instances. In the published results, the same initial 12 features have been introduced and used. But we suspect that these original 12 features are not sufficient to capture the peculiarities of the instances w.r.t. the parameters of the planner. Indeed, adding new features is a way to increase the chances to be able to identify relevant characteristics, and derive an accurate model to predict some good values for the parameters; however, the more features the higher the chances to hinder the learning phase with useless information, eventually hiding the correct correlation and resulting in worse results.
+\newpage
+\includepdf[height=30cm,pages=-,offset=2.2cm -4cm]{icaps2011.pdf}
+\newpage
 
+\section{Further Work on LaO}
+Several research directions have been explored from there on to try to improve the results of the \LAO\ framework. But none of them was able to provide significant improvements on the AI Planning domains. As a consequence, none has lead to any publication -- as unfortunately nowadays in science, negative results are no results to publish.
+
+The first direction regards the {\bf features} are used to characterize the different instances. In the published results, the same initial 12 features have been introduced and used. But we suspect that these original 12 features are not sufficient to capture the peculiarities of the instances w.r.t. the parameters of the planner. Indeed, adding new features is a way to increase the chances to be able to identify relevant characteristics, and derive an accurate model to predict some good values for the parameters; however, the more features the higher the chances to hinder the learning phase with useless information, eventually hiding the correct correlation and resulting in worse results.
 Note that, even though they didn't improve the results, these features are in the code delivered as D2.4.
 
 Two sets of possible interesting features have been explored.
@@ -172,24 +178,27 @@ Two sets of possible interesting features have been explored.
 \begin{itemize}
 \item Beyond the 12 initial features, we developed statistical features of the "histogram type``, e.g., the chronopartition, number of types and number of terms. All these features result in a histogram, i.e. a series of numbers, which can be interpreted as a distribution. For each of these, we computed the mean, the median, and the value at the first and third quartile. Using them either alone or in addition to the initial 12 features did not improve the results with independent tests. 
 
-\item Furthermore, we also developed the probing features, i.e., running a naive heuristic (e.g., greedy, depth first, \ldots) for a short time and recording the improvements. Using such features, again, did not improve the results. None of these features harmed a lot, but one could nevertheless see some degradation of the results -- which is why this line of research was abandoned. In spite of the fact tests with the additional features 24 or 32 features were made on around 100 instances, we thought that there was no risk of over-fitting. However, it seems there was a slight over-training, as the results on the test set were worse,whereas the results onthe training set were slightly improved. But the main problem was of course that these new features were not useful at all.
+\item Furthermore, we also developed the probing features, i.e., running a naive heuristic (e.g., greedy, depth first, \ldots) for a short time and recording the improvements. Using such features, again, did not improve the results. None of these features harmed a lot, but one could nevertheless see some degradation of the results -- which is why this line of research was abandoned. In spite of the fact tests with the additional features 24 or 32 features were made on around 100 instances, we thought that there was no risk of over-fitting. However, it seems there was a slight over-training, as the results on the test set were worse,whereas the results on the training set were slightly improved. But the main problem was of course that these new features were not useful at all.
 \end{itemize}
 
-On the other hand, we investigated an indirect approach to the model XXX
-\begin{itemize}
+% Some other investigations regarded the use of another model for the learner. We tried to use Rank-SVM regression, in order to avoid possible scaling issues with the fitnesses. Again, 
+% 
+% 
+% XXXXXXXXXXXXXXXXX
+%  We developed the indirect model with Artificial Neural Networks. The indirect model was optimized using CMA-ES algorithm when it was queried for new parameters. However, this approach resulted in a decrease of around 0.8 in ratio compared to the default parameters.
+% 
+% Also we tried an indirect model using Rank-SVM regression. Here, after optimizing only in a small neighborhood around the default parameters, the decrease (a ratio with defaults parameters) was slightly bellow 1. So, the indirect models did not really work out.
 
-\item  We developed the indirect model with Artificial Neural Networks. The indirect model was optimized using CMA-ES algorithm when it was queried for new parameters. However, this approach resulted in a decrease  of around 0.8 in ratio compared to the default parameters.
+Another quite worrying issue is that of generalization: a model trained for one domain was never good enough for another domain, as several experiments with different domains and different sets of instance demonstrated. We also tried to train a big, domain-independent model using all instances of the IPC-6 domains, meaning that we were using more than 500 instances for training. This did not work either when tested on an independent test set, and again the ratio of performance when compared to the default parameter set was around 0.8 (performance decrease). So learning a model more general than one domain seems to be a very hard task for \LAO. 
 
-Also we tried an indirect model using Rank-SVM regression. Here, after optimizing only in a small neighborhood around the default parameters, the decrease (a ratio with defaults parameters) was slightly bellow 1. So, the indirect models did not really work out.
 
-\item A worrying issue is that of generalization: a model trained for one domain was never good enough for another domain. We also tried to train a big, domain-independent model using all of the IPC-6 domains, meaning that we were using more than 500 instances for training. This did not work with an independent test, again the ratio was around 0.8. So learning a model more general than one domain seems to be much harder. 
+\section{Conclusion on LaO}
+At the light of the results presented in Deliverable 2.2 and above, and considering the sterile efforts that have been deployed to overcome the difficulties in improving the initial results and obtain competitive results with other approaches, the \LAO\ path seemed rather narrow and steep.
 
-\end{itemize}
+Furthermore, an additional argument was that the multi-objectivization of \DAE\ had been delayed far too long, and was becoming urgent as other researchers started to investigate multi-objective problems in AI Planning.
 
-\section{LaO at IPC11}
+Hence, it was decided for this WorkPackage, from this point, on to abandon all research on \LAO\ and to concentrate on the multi-objective \DAE.
 
-\newpage
-\includepdf[height=30cm,pages=-,offset=2.2cm -4cm]{ipc2011.pdf}
 \newpage
 
 \chapter{ParamILS: A robust and efficient framework for off-line tuning}
