--- a/deliverables/WP3/D3.3.tex
+++ b/deliverables/WP3/D3.3.tex
@@ -12,7 +12,7 @@
 \usepackage{lscape}
 \title{DESCARWIN\\\bigskip {\em \LARGE The Marriage of Descartes and Darwin}\\\vspace{8cm} 
 {\LARGE D3.3\\
-Multi-objective Experimentations}}
+Multi-Objective Experimentations}}
 %ANR-09-COSI-002
 %\author{Pierre Savéant and Johann Dréo}
 \date{\today}
@@ -215,11 +215,11 @@ This deliverable somehow witnesses the sum of efforts devoted within the DESCARW
 
 The importance of multi-objective problems in all domains of human activities should not need to be emphasized, even if the AI Planning community seems to only slowly realize it. For instance, there still isn't any multi-objective track in the forthcoming IPC in 2014. However, an ever growing group of people from that community are becoming aware of this field, and we obtained a reasonable success at last ICAPS (Rome, June 2013) when we presented this work to several experts of the field. 
 
-Beyong the first Pareto-based multi-objective AI planner, our contribution to the field also lies in the benchmark suites that we have proposed: from the simple \MULTIZENO\ domain, that can be instantiated into problems of tunable complexity, to different ways to multi-objectivize some well-known IPC domains. 
+Beyond the first Pareto-based multi-objective AI planner, our contribution to the field also lies in the benchmark suites that we have proposed: from the simple \MULTIZENO\ domain, that can be instantiated into problems of tunable complexity, to different ways to multi-objectivize some well-known IPC domains. 
 
 A lot of work remains to be done. At the algorithmic level, for instance, the parameter that governs \YAHSP\ strategy could be made self-adaptive, at the individual level or at the intermediate problem level; the stochasticity of \YAHSP\ evaluations could be used to improve the fitness of all individuals by some local search (repeated calls to \YAHSP). At the benchmark level, the true Pareto fronts of existing benchmarks should be sought, and in particular it should be possible to find more complex shapes of Pareto fronts. And, of course, a multi-objective track should be (re-)opened in one of the forthcoming IPC.
 
-However, we believe that we have laid the foundations of multi-objective AI Planning in a way that cannot be undone now (unlike the first premature attempt in 2006). And we intend to continuer our efforts in that direction.
+However, we believe that we have laid the foundations of multi-objective AI Planning in a way that cannot be undone now (unlike the first premature attempt in 2006). And we intend to continue our efforts in that direction.
 
 
 
